[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "looba-mcp"
version = "1.3.1"
description = "MCP server for browsing Looba UI snippets — search posts, read code, and discover authors."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "looba", "ui", "snippets", "css", "html", "design"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://looba.dev"
Repository = "https://github.com/looba-snippet/looba-mcp"

[project.scripts]
looba-mcp = "looba_mcp.__main__:main"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
include = ["looba_mcp*"]

[tool.setuptools.package-data]
"looba_mcp" = ["server/*.js", "server/*.json"]
